# teste

./: CMakeLists.txt  calculadora.c  calculadora.h  main.c
